--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<div class="master">
+<div class = "master">
+    <div class="calculator">
 
     <div class="row1">
         <div class ="display"></div>
@@ -47,7 +48,7 @@
         <div class = clear>Clear</div>
     </div>
 
+    </div>
 </div>
-    
 </body>
 </html>
