--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Josh's Web Calculator</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 
-<div class = "master">
+
     <div class="calculator">
 
     <div class="row1">
@@ -49,6 +50,6 @@
     </div>
 
     </div>
-</div>
+
 </body>
 </html>
