Complete Phase 1: Left Numbers Enabled

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <div class ="four">4</div>
         <div class ="five">5</div>
         <div class ="six">6</div>
-        <div class = multiply>*</div>
-        
+        <div class = multiply>*</div>     
     </div>
 
     <div class="row4">
@@ -49,6 +48,6 @@
     </div>
 
     </div>
-
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
