Complete phase 4: Finalize calculations. WebCalculator  V1 Complete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
     <div class="row6">
         <div class = clear>Clear</div>
-        <div class = equals>=</div>
+        <div class = equalsign>=</div>
     </div>
 
     </div>
